Fixes for horisontal scroll apears on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&subset=cyrillic');
 html {
   height: 100%;
+  width: 100%;
 }
 
 body {
